samples/_failures_safe/1761544187_f59ee2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dad4d3bd.c: In function ‘main’:
./samples/SAFE/__tmp_dad4d3bd.c:154:21: error: expected ‘)’ at end of input
  154 |     if (!fgets(input
      |               ~     ^
      |                     )
./samples/SAFE/__tmp_dad4d3bd.c:154:10: error: too few arguments to function ‘fgets’
  154 |     if (!fgets(input
      |          ^~~~~
In file included from /usr/include/stdio.h:980,
                 from ./samples/SAFE/__tmp_dad4d3bd.c:2:
/usr/include/x86_64-linux-gnu/bits/stdio2.h:196:1: note: declared here
  196 | fgets (char *__restrict __s, int __n, FILE *__restrict __stream)
      | ^~~~~
./samples/SAFE/__tmp_dad4d3bd.c:154:5: error: expected declaration or statement at end of input
  154 |     if (!fgets(input
      |     ^~
